Hubspot embedded form and mobile alignment fix on SME template

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -3470,7 +3470,7 @@ body.page-template-template-nextwave-landing #hubspot_form_footer{display:none!i
     line-height:18px!important;
     margin:6px 0!important;
   }
-  input[type=text],input[type=email],textarea{
+  input[type=text],input[type=email],input[type=tel],textarea{
     text-align: left;
     border: 1px solid #888 !important;
     background-color:#f2f2f2!important;
